--- a/style.css
+++ b/style.css
@@ -182,6 +182,32 @@ a {
   position: relative;
 }
 
+/* CSS for Scrollable Certifications Section with Buttons */
+.certificate-carousel {
+  width: 100%;
+  max-width: 800px;
+}
+
+.certificate-view {
+  width: 500px;
+  height: 500px;
+  overflow: hidden;
+}
+
+#certificateContainer {
+  display: flex;
+  transition: transform 0.5s ease;
+}
+
+.certificate-img {
+  height: 100%;
+  width: 500px;
+  object-fit: contain;
+  flex-shrink: 0;
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
+  cursor: pointer;
+}
+
 /* Portfolio image hover effect */
 .portfolio-item img {
   border-radius: 0.5rem;
