--- a/style.css
+++ b/style.css
@@ -14,29 +14,31 @@ body {
 header {
   position: fixed;
   width: 100%;
-  top: 0;
-  right: 0;
   z-index: 1000;
   justify-content: space-between;
   padding: 40px 16%;
   background: transparent;
   background-color: #1b263b;
   transition: all 0.5s ease;
+  margin: auto;
 }
 
 /* Navbar custom spacing */
+
+/*
+.navbar-brand {
+  font-size: 25px;
+}
+  */
+
 .navbar-nav .nav-link {
   margin-right: 1rem;
   color: #c3cad5;
+  font-size: large;
 }
 .navbar-nav .nav-link:hover {
   color: #13bbff;
   text-shadow: 3px 3px 20px #13bbff, -2px 1px 30px #fff;
-}
-
-.navbar-brand {
-  color: #fff;
-  font-size: 25px;
 }
 
 .h-btn {
@@ -67,6 +69,11 @@ header {
 .hero h1 span,
 .navbar-brand span {
   color: #0d6efd;
+}
+
+.typed-text {
+  color: #0d6efd;
+  height: 22px;
 }
 
 #home {
@@ -181,30 +188,8 @@ a {
 }
 
 /* CSS for Scrollable Certifications Section with Buttons */
-.certificate-carousel {
-  width: 100%;
-  max-width: 800px;
-}
 
-.certificate-view {
-  width: 500px;
-  height: 500px;
-  overflow: hidden;
-}
 
-#certificateContainer {
-  display: flex;
-  transition: transform 0.5s ease;
-}
-
-.certificate-img {
-  height: 100%;
-  width: 500px;
-  object-fit: contain;
-  flex-shrink: 0;
-  transition: transform 0.3s ease, box-shadow 0.3s ease;
-  cursor: pointer;
-}
 
 /* Portfolio image hover effect */
 .portfolio-item img {
